--- a/Mext.Tests/Mext.Tests.csproj
+++ b/Mext.Tests/Mext.Tests.csproj
@@ -3,12 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>10.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{FEDF1C5A-22FA-479B-87E0-AC9D3FAF2D98}</ProjectGuid>
+    <ProjectGuid>{DB948D56-1BF7-43CB-8A64-AD49B6A82523}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Mext</RootNamespace>
-    <AssemblyName>Mext</AssemblyName>
+    <RootNamespace>Mext.Tests</RootNamespace>
+    <AssemblyName>Mext.Tests</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,27 +30,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Web.Extensions" />
+    <Reference Include="nunit.core, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
+    <Reference Include="nunit.framework, Version=2.4.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="XmlExtensions.cs" />
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="JsonExtensions.cs" />
+    <Compile Include="Test.cs" />
+    <Compile Include="JsonTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <ProjectExtensions>
-    <MonoDevelop>
-      <Properties>
-        <Policies>
-          <DotNetNamingPolicy DirectoryNamespaceAssociation="Hierarchical" ResourceNamePolicy="FileFormatDefault" />
-          <TextStylePolicy inheritsSet="null" scope="text/x-csharp" />
-          <CSharpFormattingPolicy inheritsSet="Mono" inheritsScope="text/x-csharp" scope="text/x-csharp" />
-          <TextStylePolicy FileWidth="120" TabWidth="4" inheritsSet="Mono" inheritsScope="text/plain" scope="text/plain" />
-        </Policies>
-      </Properties>
-    </MonoDevelop>
-  </ProjectExtensions>
+  <ItemGroup>
+    <ProjectReference Include="..\Mext\Mext.csproj">
+      <Project>{FEDF1C5A-22FA-479B-87E0-AC9D3FAF2D98}</Project>
+      <Name>Mext</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
